infra/k8s/auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth # Selector helps to find the pods the deployment creates
  template:
    metadata:
      labels:
        app: auth # Label gets applied to the pod
    spec:
      containers:
        - name: auth
          image: akila97/auth
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 3000
      targetPort: 3000
