infra/k8s/client-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1 # 1 single pod
  selector:
    matchLabels:
      app: client # Selector helps to find the pods the deployment creates
  template: # Describes how every pod created and managed by this deployment should behave
    metadata:
      labels:
        app: client # Label gets applied to the pod
    spec:
      containers:
        - name: client
          image: akila97/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  selector:
    app: client
  ports:
    - name: client
      protocol: TCP
      port: 3000
      targetPort: 3000
