infra/k8s/nats-deployement.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-deployment
spec:
  replicas: 1 # 1 single pod
  selector:
    matchLabels:
      app: nats # Selector helps to find the pods the deployment creates
  template: # Describes how every pod created and managed by this deployment should behave
    metadata:
      labels:
        app: nats # Label gets applied to the pod
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.17.0
          args: [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi", # hb - Heartbeat hbi - how often
              "5s",
              "-hbt", # How long each client has to respond
              "5s",
              "-hbf", # No of tries before concluding as dead
              "2",
              "-SD",
              "-cid",
              "ticketing", # cid - cluster Id
            ]
---
# Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: nats-service
spec:
  selector:
    app: nats
  ports:
    - name: client
      protocol: TCP
      port: 4222
      targetPort: 4222
    - name: monitoring
      protocol: TCP
      port: 8222
      targetPort: 8222
