infra/k8s/orders-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
spec:
  replicas: 1 # 1 single pod
  selector:
    matchLabels:
      app: orders # Selector helps to find the pods the deployment creates
  template: # Describes how every pod created and managed by this deployment should behave
    metadata:
      labels:
        app: orders # Label gets applied to the pod
    spec:
      containers:
        - name: orders
          image: akila97/orders
---
# Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - name: orders
      protocol: TCP
      port: 3000
      targetPort: 3000
