infra/k8s/tickets-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-deployment
spec:
  replicas: 1 # 1 single pod
  selector:
    matchLabels:
      app: tickets # Selector helps to find the pods the deployment creates
  template: # Describes how every pod created and managed by this deployment should behave
    metadata:
      labels:
        app: tickets # Label gets applied to the pod
    spec:
      containers:
        - name: tickets
          image: akila97/tickets
---
# Cluster IP service
apiVersion: v1
kind: Service
metadata:
  name: tickets-service
spec:
  selector:
    app: tickets
  ports:
    - name: tickets
      protocol: TCP
      port: 3000
      targetPort: 3000
